@@ -180,6 +180,11 @@ static int neko_handler_rec( request_rec *r ) {
 	const char *ctype;
 	value exc = NULL;
 
+#	if defined(APACHE_2_X) || defined(NEKO_WINDOWS)
+	// we are using threads, so let's make sure that the current thread is registered
+	neko_thread_register(true);
+#	endif
+
 	config.hits++;
 
 	ctx.r = r;
