@@ -28,11 +28,7 @@
 #endif
 
 #ifdef NEKO_WINDOWS
-#	ifdef NEKO_STANDALONE
-#		define GC_NOT_DLL
-#	else
-#		define GC_DLL
-#	endif
+#	define GC_NOT_DLL
 #	define GC_WIN32_THREADS
 #endif
 
@@ -119,9 +115,6 @@ void neko_gc_init() {
 #	endif
 #if (GC_VERSION_MAJOR >= 7) && defined(NEKO_WINDOWS)
 	GC_all_interior_pointers = 0;
-#	ifndef NEKO_STANDALONE
-	GC_use_DllMain();
-#	endif
 #endif
 	GC_init();
 	GC_no_dls = 1;
