@@ -34,6 +34,7 @@ EXTERN void neko_gc_loop();
 EXTERN void neko_gc_stats( int *heap, int *free );
 EXTERN int neko_thread_create( thread_main_func init, thread_main_func main, void *param, void **handle );
 EXTERN void neko_thread_blocking( thread_main_func f, void *p );
+EXTERN bool neko_thread_register( bool t );
 
 EXTERN neko_vm *neko_vm_alloc( void *unused );
 EXTERN neko_vm *neko_vm_current();
