@@ -9,6 +9,8 @@
 	mod_tora : fix for Apache 2.x - does not set the content-type if declined
 	std, mod_tora : propagate jit mode to created threads
 	nekoc : optimization for debug infos : precompute file table at compile-time
+	threads : don't use GC_use_DllMain + staticaly link gc on Windows
+	threads : added neko_gc_register_thread (and use it on Apache 2.x or 1.3/win)
 
 2008-09-23 : 1.8.0
 	added mod_tora (neko application server)
